feat(App): Move backward

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>Recruitment!</h1>
 
-<h3>workforce ({{ (data$ | async)?.length }}):</h3>
+<h3>workforce (XX):</h3>
 
 <ul>
-    <li *ngFor="let item of data$ | async">{{ item.name }}; {{ item.shift }}; {{ item.type }}</li>
+    <li>Paul BISMUTH; 2x8 C; MOD</li>
 </ul>
